--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -73,3 +73,23 @@ header{
 .orders ul a{
     text-decoration: none;
 }
+
+.failed, .rejected{
+    background-color: #dc3545!important;
+}
+
+.created{
+    background-color: #0d6efd!important;
+}
+
+.payed{
+    background-color: #198754!important;
+}
+
+.pending{
+    background-color: #ffc107!important;
+}
+
+.list-group-item, form .mb-3{
+    text-align: justify;
+}
